[gd_scene load_steps=8 format=3 uid="uid://bhk03lbx4w278"]

[ext_resource type="Texture2D" uid="uid://dpn6njtg8op4e" path="res://Scenes/Assets/company-button-normal.png" id="1_4tiup"]
[ext_resource type="Texture2D" uid="uid://bcbygbsssy53j" path="res://Scenes/Assets/company-button-pressed.png" id="2_f1ls0"]
[ext_resource type="Texture2D" uid="uid://byu3377mcb80v" path="res://Scenes/Assets/company-button-hover.png" id="3_w8808"]
[ext_resource type="Texture2D" uid="uid://dkvtamnh7onpq" path="res://Scenes/Assets/company-button-disabled.png" id="4_dug01"]
[ext_resource type="Script" path="res://Scenes/Company/Company Upgrades/company_button.gd" id="5_dg44s"]
[ext_resource type="Texture2D" uid="uid://b8q2m22rg7hb0" path="res://Scenes/Assets/word_of_mouth.png" id="6_0mrsp"]
[ext_resource type="Texture2D" uid="uid://dxd4wvamh4cy8" path="res://Scenes/kami_scenes/kami_assetss/hover_background.png" id="6_ipkjh"]

[node name="TextureButton" type="TextureButton"]
offset_right = 313.0
offset_bottom = 127.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("1_4tiup")
texture_pressed = ExtResource("2_f1ls0")
texture_hover = ExtResource("3_w8808")
texture_disabled = ExtResource("4_dug01")
script = ExtResource("5_dg44s")
timed = false

[node name="hover" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_ipkjh")

[node name="picture" type="Sprite2D" parent="."]
position = Vector2(156, 64)
texture = ExtResource("6_0mrsp")

[node name="emitter" type="CPUParticles2D" parent="."]

[node name="sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_exited" from="hover" to="." method="_on_hover_mouse_exited"]
